--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "googleapis": "^142.0.0",
+    "lodash": "^4.17.21",
     "next": "14.2.6",
     "raw-loader": "^4.0.2",
     "react": "^18",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.14",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
